...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:onRefreshListener="@{viewmodel::refresh}"
            app:refreshing="@{viewmodel.dataLoading}">

            <RelativeLayout
                android:id="@+id/images_container_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:orientation="vertical">

                <LinearLayout
...
                        android:gravity="center"
                        android:text="@{context.getString(viewmodel.currentFilteringLabel)}"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/colorPrimary" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/images_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:images="@{viewmodel.images}"
                        android:padding="@dimen/list_item_padding"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
